@@ -265,27 +265,24 @@
       #endif
 
     # Weak-Pointer-Liste aktualisieren:
-      #define update_weakpointers()  \
-        { var object L = O(all_weakpointers);                             \
-          until (eq(L,Fixnum_0))                                          \
-            { var object* p = &TheRecord(L)->recdata[weakpointer_length]; \
-              var uintC count;                                            \
-              dotimespC(count,weakpointer_xlength/sizeof(object),         \
-                { update(p); p++; }                                       \
-                );                                                        \
-              L = TheWeakpointer(L)->wp_cdr;                              \
-        }   }
-      #define update_weakpointers_mod()  \
-        { var object L = O(all_weakpointers);                             \
-          until (eq(L,Fixnum_0))                                          \
-            { var object next = TheWeakpointer(L)->wp_cdr;                \
-              var object* p = &TheRecord(L)->recdata[weakpointer_length]; \
-              var uintC count;                                            \
-              dotimespC(count,weakpointer_xlength/sizeof(object),         \
-                { update(p); p++; }                                       \
-                );                                                        \
-              L = next;                                                   \
-        }   }
+      #define update_weakpointer(ww)                                      \
+        do { var object* p = &TheRecord(ww)->recdata[weakpointer_length]; \
+             var uintC count = weakpointer_xlength/sizeof(object);        \
+             dotimespC(count,count,{ update(p); p++; });                  \
+        } while(0)
+      #define update_weakpointers()                     \
+        do { var object L = O(all_weakpointers);        \
+             while (!eq(L,Fixnum_0)) {                  \
+               update_weakpointer(L);                   \
+               L = TheWeakpointer(L)->wp_cdr;           \
+        }    } while(0)
+      #define update_weakpointers_mod()                         \
+        do { var object L = O(all_weakpointers);                \
+             while (!eq(L,Fixnum_0)) {                          \
+               var object next = TheWeakpointer(L)->wp_cdr;     \
+               update_weakpointer(L);                           \
+               L = next;                                        \
+        }    } while(0)
 
     # STACKs aktualisieren:
       #define update_stackobj_normal(objptr)  \
